# Platforms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_web_build.ps1  run_web_build.ps1  rungame.sh
assets/tiled/levels/: level1.tmx
assets/tiled/tilesets/: fruit_tileset.tsx  platforms_tileset.tsx  player_tileset.tsx  world_tileset.tsx
include/camera/: CameraController.h
include/core/: GameManager.h
include/objects/: Coin.h  Hud.h  Player.h  Sprite.h
include/tiled/: TiledMap.h
src/: main.cpp
src/camera/: CameraController.cpp
src/core/: GameManager.cpp
src/objects/: Coin.cpp  Hud.cpp  Player.cpp  Sprite.cpp
src/tiled/: TiledMap.cpp
